# gr-bootstrap

./: CMakeLists.txt  MANIFEST.md
apps/: CMakeLists.txt
cmake/Modules/: bootstrapConfig.cmake  gnuradio-bootstrapConfig.cmake
docs/: CMakeLists.txt  README.bootstrap
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  bootstrap_ber_b.block.yml
include/bootstrap/: CMakeLists.txt
include/gnuradio/bootstrap/: CMakeLists.txt  api.h  ber_b.h
lib/: CMakeLists.txt  ber_b_impl.cc  ber_b_impl.h
python/: CMakeLists.txt  __init__.py
python/bindings/: CMakeLists.txt  python_bindings.cc
python/bootstrap/: CMakeLists.txt  __init__.py  qa_ber_b.py
python/bootstrap/bindings/: CMakeLists.txt  ber_b_python.cc  python_bindings.cc
python/bootstrap/bindings/docstrings/: ber_b_pydoc_template.h
